--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar bg-primary" data-bs-theme="">
+<nav class="navbar bg-primary sticky-top" data-bs-theme="">
   <div class="container">
     <form (submit)="onFormSubmit($event)" class="d-flex w-100" role="search">
       <input
